# OOP

./: Вопросы к экзамену.odt
Курсовая работа/: Отчет.odt
Курсовая работа/untitled/: Box.cpp  Box.h  CMakeLists.txt  Cross.cpp  Cross.h  Figure.cpp  Figure.h  GameState.h  Laticce.cpp  Laticce.h  Main.cpp  Menu.cpp  Menu.h  Opacity.cpp  Opacity.h  Zero.cpp  Zero.h
Курсовая работа/Крестики - нолики/: Box.cpp  Box.h  Cross.cpp  Cross.h  Figure.cpp  Figure.h  GameState.h  Laticce.cpp  Laticce.h  Menu.cpp  Menu.h  Opacity.cpp  Opacity.h  Zero.cpp  Zero.h  main.cpp
Лабораторная 2/Lab2/include/: gfx.h
Лабораторная 2/Lab2/src/: gfx.cpp
Лаборатторная 6/: Makefile
Пример gfx/: example  example.cpp  gfx.cpp
